k8s/overlays/dev/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testify-ingress
  namespace: testify
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: testify.local
      http:
        paths:
          - path: /testify-app(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: testify-app
                port:
                  number: 3000
